# ConvertTo3mf

./: CMakeLists.txt  README.md
cmake/: Findlibzip.cmake
include/: coordinate.hpp  detect_file_type.hpp  face.hpp  job.hpp  main.hpp  mesh.hpp  model.hpp  obj.hpp  point3.hpp  stl_ascii.hpp  stl_binary.hpp  threemf.hpp
src/: detect_file_type.cpp  job.cpp  main.cpp  obj.cpp  point3.cpp  stl_ascii.cpp  stl_binary.cpp  threemf.cpp
